# nextcloud

./: .gitignore  Cargo.toml  build.rs  tauri.conf.json
icons/: icon.icns
src/: inject.js  main.rs  offset.rs  titlebar.rs
